--- a/discount.html
+++ b/discount.html
@@ -119,8 +119,9 @@
                 <img src="img/discount/discounts_weston_mon.jpg">
             </div>
 
-            <hr>
-
+            <hr> <!-- break in the html, this is made to be dotted to divide content -->
+            
+            <!-- container holding the text and image after the break from the hierachicle post-->
             <div class="discount-two discount-items">
                 <h3>Annual Discount Card Benefits</h3>
                 <p>• Free entry
