--- a/events.html
+++ b/events.html
@@ -90,7 +90,7 @@
         <!--- Nav bar end --->
     </header>
 
-
+    <!-- this is the container for the parallax banner that appears on manay of the pages -->
     <div class="events-page jumbotron jumbotron-fluid">
         <div class="container">
             <h1>All Stars Sports Bar Events and Competitions</h1>
@@ -100,7 +100,7 @@
 
 
     <div class="container">
-        <div class="main-content-area">
+        <div class="main-content-area"> <!--basic container with styling and spacing of elements -->
             <h2>Check out the open tournaments aimed at players from all over below</h2>
             <P>The South West Pool Tour is held at Allstars Sports Bars.
                 There are events for Ladies, Seniors as well as the main Open.</P>
@@ -110,17 +110,18 @@
 
     <div class="container">
         <div class="events-section">
+            <!--heading for the events -->
             <h2>All Stars Sports Events</h2>
 
 
             <div class="container-fluid">
                 <div class="events-locations">
 
-                    <div class="location-one locations">
+                    <div class="location-one locations"><!--basic class with colour and backrounf colour with 30px padding to make it snug  -->
                         <h3>Taunton</h3>
-                        <div class="row">
+                        <div class="row"> <!-- placing each section into a row-->
                             <div class="col-sm-12 col-md-3 col-lg-3">
-                                <h4><strong>Pool</strong></h4>
+                                <h4><strong>Pool</strong></h4> <!--use of headings in a heirarchicle order is good for seo -->
                                 <p>Allstars Sports Bar Taunton sponsors the Somerset County Pool Association.
                                     It is the home venue to Somerset County.
                                     Multiple competitions held all year round for Men, Ladies, Seniors and Juniors</p>
@@ -134,7 +135,7 @@
                                 <p>Allstars has 4 Dart boards with electronic scoreboards</p>
                             </div>
                             <div class="col-sm-12 col-md-3 col-lg-3">
-                                <h4><strong>Quizzes & other events</strong></h4>
+                                <h4><strong>Quizzes and other events</strong></h4>
                                 <p>Allstars holds regular quiz nights ask a staff member for more information.<p>
                             </div>
                         </div>
