--- a/faq.html
+++ b/faq.html
@@ -108,11 +108,11 @@
 
 
     <div class="container">
-        <div class="question-and-answers">
-            <h3><strong>Do I have to be a member to get into Allstars?</strong></h3>
+        <div class="question-and-answers"> <!-- class with display and other minor css same as most basic classes such as main content area-->
+            <h3><strong>Do I have to be a member to get into Allstars?</strong></h3> <!-- Phrase tag toshow important text  -->
             <p>Non-members are perfectly welcome to any of our venues*</p>
 
-            <hr>
+            <hr> <!--break to signify next part  -->
 
             <h3><strong>Do I have to be a member to hire a pool table?</strong></h3>
             <p>Non members are welcome to rent Pool, Snooker and American pool tables at any time, just keep in mind if you have a members discount card you will get discounted table rental! Click here for more information on getting a Members Discount Card</p>
