--- a/index - Copy.html
+++ b/index - Copy.html
@@ -69,7 +69,7 @@
                         <a class="nav-link" href="events.html">Events</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Food</a>
+                        <a class="nav-link" href="food.html">Food</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="discount.html">Discounts</a>
@@ -91,50 +91,74 @@
     </header>
 
 
-    <div class="food-page jumbotron jumbotron-fluid">
-        <div class="container">
-            <h1>All Stars Food</h1>
-            <p>All the menus for the All Stars Sports Bar menu</p>
+    <div class="container-fluid">
+        <div class="home-page-slider">
+            <div class="container">
+                <h1>Welcome to All Stars Sports Bar</h1>
+                <p>No.1 for live sports and entertainment</p>
+            </div>
+
+            <div class="home-page-one">
+            </div>
+
+            <div class="home-page-two">
+            </div>
+
+            <div class="home-page-three">
+            </div>
+
+            <div class="home-page-four">
+            </div>
         </div>
     </div>
 
+
+    <!--- Trio of boxes --->
 
     <div class="container">
         <div class="main-content-area">
-            <h2>All the Allstars Sports Bars offer a fanastic all day menu</h2>
-            <P>Full range of Deep Pan Pizza's
-
-
-                We're open from 10am till late all week so you can drop by any time. We have fantastic facilities and serve hot and cold food at great prices.
-
-                Families are more than welcome! Live Sport And Dining
-                Why not coincide your meal while watching your favourite sport on one of the many TV's
-                or
-                the giant HD Screens. You can even choose the sport channel you want, just ask at the bar. </P>
-            <P>Menus can be found below</P>
+            <h2>Customer Notice</h2>
+            <P>Following the latest Government recommendations
+                Please note: Due to COVID-19 - Allstars venues will be closed until further notice
+                sorry for any inconvenience caused, keep safe everyone.</P>
         </div>
-    </div>
 
 
-    <div class="container-fluid">
-        <div class="menu-selection"> <!-- basic class defining display background colour and padding -->
-            <div class="row">
-                <div class="col-sm-12 col-md-3 col-lg-3"> <!--column layout for deifferent deivces adn basic rounded buttons with a dark grey colour '_blank' is the same as using target ='' -->
-                    <!--window.open defines to open a new tab or broswer window dependant on broswer being used -->
-                    <button onclick=" window.open('https://www.allstarssportsbars.co.uk/downloads/menus/MenuBRISTOL.pdf', '_blank'); return false;">Bristol</button>
+    <!--- Trio of boxes --->
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                <div class="discount-card">
+                    <h3>Discount card</h3>
                 </div>
-                <div class="col-sm-12 col-md-3 col-lg-3">
-                    <button onclick=" window.open('https://www.allstarssportsbars.co.uk/downloads/menus/MenuEXETER.pdf', '_blank'); return false;">Exeter</button>
+            </div>
+
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                <div class="parties">
+                    <h3>Parties</h3>
                 </div>
-                <div class="col-sm-12 col-md-3 col-lg-3">
-                    <button onclick=" window.open('https://www.allstarssportsbars.co.uk/downloads/menus/MenuTAUNTON.pdf', '_blank'); return false;">Taunton</button>
-                </div>
-                <div class="col-sm-12 col-md-3 col-lg-3">
-                    <button onclick=" window.open('https://www.allstarssportsbars.co.uk/downloads/menus/MenuWSM.pdf', '_blank'); return false;">Weston</button>
+            </div>
+
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                <div class="food">
+                    <h3>Food</h3>
                 </div>
             </div>
         </div>
     </div>
+
+
+      <div class="main-content-area" id="announcement">
+            <h2>Announcement and News</h2>
+            <P>AllStars Bristol are extremely proud to announce that the table used in the 2018 Mosconi Cip now lives with us. This is a Rasson Billiards Victory table covered in Andy 988 cloth. A very special table in a very special place!!
+                everyone is welcome to try it out. <br>
+                Chinese 8-Ball is a cue sport in it’s infancy, but one that has began to catch the global audience’s attention. This table is the same size as an American pool table (9ft x 5ft) but cut with snooker pockets and a napped cloth. America pool balls are used to play the game, which clearly makes the game VERY difficult. Many of the world’s top snooker players have competed in Chinese 8-Ball events worldwide and the verdict has been extremely positive about this new game. <br>
+                Stephen Hendry: “Chinese 8-Ball is on the way to going out to the world. I’m happy to be apart of the process.”<br>
+            </P>
+        </div>
+    </div>
+
+
 
 
     <!--social and venue banner -->
@@ -144,23 +168,23 @@
             <button id="venue-button">Click here</button>
             <div class="venue-dropdown-content">
 
-                <div class="venue-content-one venue-content">
-                    <a href="venuesT.html"><img src="img/venuesIcon.png"></a>
-                    <p>Taunton</p>
+                    <div class="venue-content-one venue-content">
+                        <a href=""><img src="img/venuesIcon.png"></a>
+                        <p>test text</p>
+                    </div>
+                    <div class="venue-content-two venue-content">
+                        <a href=""><img src="img/venuesIcon.png"></a>
+                        <p>test text</p>
+                    </div>
+                    <div class="venue-content-three venue-content">
+                        <a href=""><img src="img/venuesIcon.png"></a>
+                        <p>test text</p>
+                    </div>
+                    <div class="venue-content-four venue-content">
+                        <a href=""><img src="img/venuesIcon.png"></a>
+                        <p>test text</p>
+                    </div>
                 </div>
-                <div class="venue-content-two venue-content">
-                    <a href="venuesE.html"><img src="img/venuesIcon.png"></a>
-                    <p>Exeter</p>
-                </div>
-                <div class="venue-content-three venue-content">
-                    <a href="venuesB.html"><img src="img/venuesIcon.png"></a>
-                    <p>Bristol</p>
-                </div>
-                <div class="venue-content-four venue-content">
-                    <a href="venuesW.html"><img src="img/venuesIcon.png"></a>
-                    <p>Weston</p>
-                </div>
-            </div>
         </div>
     </div>
 
@@ -173,24 +197,23 @@
             <div class="social-dropdown-content">
                 <div class="row">
                     <div class="social-content-one social-content">
-                        <a href="https://www.facebook.com/allstarstaunton/?fref=ts" target="_blank"><img src="img/facebook.png"></a>
-                        <p>Taunton</p>
+                        <a href=""><img src="img/facebook.png"></a>
+                        <p>test text</p>
                     </div>
                     <div class="social-content-two social-content">
-                        <a href="https://www.facebook.com/allstarssportsbarexeter/?ref=br_rs" target="_blank"><img src="img/facebook.png"></a>
-                        <p>Exeter</p>
+                        <a href=""><img src="img/facebook.png"></a>
+                        <p>test text</p>
                     </div>
                     <div class="social-content-three social-content">
-                        <a href="https://www.facebook.com/allstarsbristol/?fref=ts" target="_blank"><img src="img/facebook.png"></a>
-                        <p>Bristol</p>
+                        <a href=""><img src="img/facebook.png"></a>
+                        <p>test text</p>
                     </div>
                     <div class="social-content-four social-content">
-                        <a href="https://www.facebook.com/allstarssportsbars/?ref=br_rs" target="_blank"><img src="img/facebook.png"></a>
-                        <p>Weston</p>
+                        <a href=""><img src="img/facebook.png"></a>
+                        <p>test text</p>
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 
@@ -214,7 +237,8 @@
                 <div class="col-sm-12 col-md-4 col-lg-4">
                     <div class="footer-right">
                         <p>Weston-super-Mare 01934 419 111 | Taunton 01823 334 880 | Bristol 01179 294 295 | Exeter 01392 438 853</p>
-                        <p>weston@allstarssportsbars.co.uk, taunton@allstarssportsbars.co.uk, bristol@allstarssportsbars.co.uk, exeter@allstarssportsbars.co.uk</p>
+                        <p>weston@allstarssportsbars.co.uk,                                 taunton@allstarssportsbars.co.uk,                                 bristol@allstarssportsbars.co.uk,                                 exeter@allstarssportsbars.co.uk</p>
+
                         <a href="https://www.facebook.com/groups/1734623133420097/" target="_blank"><img src="img/facebook.png" class="facebook-icon" alt="Facebook"></a>
                         <a href="https://www.linkedin.com/company/allstars-sports-bars" target="_blank"><img src="img/linkedin.png" class="linkedin-icon" alt="LinkedIn"></a>
                     </div>
@@ -223,7 +247,9 @@
         </div>
 
     </footer>
+
     <script src="app.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
