--- a/livesports.html
+++ b/livesports.html
@@ -101,13 +101,14 @@
     <div class="container">
         <div class="main-content-area">
             <h2>Choose Your Channel</h2>
-            <P>Don't think you have to watch what everyone else is watching. If you're playing at any of our tables you can request the channel of your choice on your nearest set. Want to watch live Formula One? No problem. Football? You tell us which match and we'll hook your set up.</P>
+            <P>Don't think you have to watch what everyone else is watching. If you're playing at any of our tables you can request the channel of your choice on your nearest set.
+                Want to watch live Formula One? No problem. Football? You tell us which match and we'll hook your set up.</P>
         </div>
     </div>
 
-    <!-- api here -->
+    <!-- api intro -->
     <div class="container-fluid">
-        <div class="sports-on">
+        <div class="sports-on"> <!--class with text centred -->
             <h2>Live Sports On</h2>
 
         </div>
@@ -118,7 +119,8 @@
     <main>
         <section id="sports">
             <div id="APIArea" class="sportsArea">
-                <table id="APITable" style="width: 100%;">
+                <!-- IDs for the JS api calling and putting information into a html format into a table -->
+                <table id="APITable" style="width: 100%;"> 
                     <tr>
                         <th>Away Team</th>
                         <th>Home Team</th>
