--- a/parties.html
+++ b/parties.html
@@ -108,6 +108,7 @@
 
 
     <div class="container-fluid">
+        <!--individual sections to apply a backgroun image for parallax repeating 4 times -->
         <div class="party-section-one party-sections">
             <h3>Party at All Stars Weston-Super-Mare</h3>
             <p>Although Allstars in Weston-super-Mare doesn't have a function room we can still offer great deals for groups and functions please contact us.</p>
