--- a/privacy.html
+++ b/privacy.html
@@ -108,7 +108,7 @@
 
 
     <div class="container">
-        <div class="privacy-content">
+        <div class="privacy-content"> <!-- class with 30px padding bottom to keep the content spread out  -->
             <p>Allstars Sports Bars cares about and respects your privacy. For this reason, we collect and use personal data only as it might be needed for us to deliver to you our products, services and websites (collectively, our "Services"). Your personal data includes information such as:
 
                 Name
