--- a/social.html
+++ b/social.html
@@ -115,10 +115,11 @@
             <div class="container-fluid">
                 <div class="events-locations">
 
-                    <div class="social social-one">
+                    <div class="social social-one"> <!-- pulling styles from the events page just specifiying padding and colour-->
                         <h3>Taunton</h3>
                         <div class="row">
-                            <div class="col-sm-12 col-md-12 col-lg-12">
+                            <div class="col-sm-12 col-md-12 col-lg-12"> <!-- multiple columns for different deveices -->
+                                <!--img warpped in an A tag to redirect people to the correct site  -->
                                 <a href="https://www.facebook.com/allstarstaunton/?fref=ts" target="_blank"><img src="img/facebook-icon.png"></a>
                             </div>
                         </div>
