--- a/venuesB.html
+++ b/venuesB.html
@@ -112,7 +112,8 @@
             <div class="venue-loction-one venue-loctions">
                 <h3>Location on Google maps</h3>
                 <p>We're open from 10am everyday so you can drop by any time. We have fantastic facilities and serve hot and cold food at great prices.</p>
-                <iframe width="600" height="450" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJ9xwZ0cSNcUgRU4DZ-2C3xa8&key=AIzaSyApbntvsvfTp-vrJeZ0-DJhbXXbAb9XlYo" allowfullscreen></iframe>
+                <!--google maps supplied from them the src is the location of the bristol brach below is the text content -->
+                <iframe width="600" height="450" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJ9xwZ0cSNcUgRU4DZ-2C3xa8&key=AIzaSyApbntvsvfTp-vrJeZ0-DJhbXXbAb9XlYo" allowfullscreen></iframe> 
                 <br>
                 <p>15-19 Queens Road
                     Bristol BS8 1QE Tel: 01179 294 295</p>
