--- a/venuesE.html
+++ b/venuesE.html
@@ -114,6 +114,7 @@
                 <h3>Location on Google maps</h3>
                 <p>We're open from 10am everday so you can drop by any time. We have fantastic facilities and serve hot and cold food at great prices.
                     Families are more than welcome!</p>
+                <!-- sane as the bristol location but with a different src link due to a different geogrphic location, iframe is set to 100% width to be responsive-->
                 <iframe width="600" height="450" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJMTTiPj6kbUgRPcdYpR68tJI&key=AIzaSyApbntvsvfTp-vrJeZ0-DJhbXXbAb9XlYo" allowfullscreen></iframe>
                 <br>
                 <p>19-23 Sidwell Street
