--- a/venuesT.html
+++ b/venuesT.html
@@ -114,6 +114,7 @@
                 <h3> Location on Google maps </h3>
                 <p>
                     We're open from 10am till late all week so you can drop by any time.</p>
+                <!--Taunton Location on Google Maps with content below from the website -->
                 <iframe width="600" height="450" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJ_14YaVb0bUgRO4FxCOLOJK0&key=AIzaSyApbntvsvfTp-vrJeZ0-DJhbXXbAb9XlYo" allowfullscreen></iframe>
                 <br>
                 <p>22 East Street
