--- a/venuesW.html
+++ b/venuesW.html
@@ -114,6 +114,7 @@
                 <h3>Location on Google maps</h3>
                 <p>We're open from 10am everyday so you can drop by any time. We have fantastic facilities and serve hot and cold food at great prices.
                     Families are more than welcome!</p>
+                <!-- Weston super mare location on google maps, using the same as all the previous venues -->
                 <iframe width="600" height="450" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJU6DVyNT4cUgRP5NuMe2zdTo&key=AIzaSyApbntvsvfTp-vrJeZ0-DJhbXXbAb9XlYo" allowfullscreen></iframe>
                 <br>
                 <p>12-16 Regent St
